--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel=stylesheet href=assets/css/bootstrap.css>
     <link rel="stylesheet" href="assets/css/animate.css">
 	<link rel=stylesheet href=assets/css/main.css>
+	<link rel="shortcut icon" href="#">
 </head>
 <body>
 	<img class="fixed-gift wow pulse infinite" src=assets/img/gift.png alt>
